# llmwiki

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  build.rs  clippy.toml  deny.toml  install.ps1  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  branch-protection.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  install-test.yml  lockfile-update.yml  publish-crates.yml  release.yml
agents/skills/wiki/: SKILL.md
docs/superpowers/plans/: 2026-06-21-karpathy-wiki.md  2026-06-22-llmwiki-installable.md  2026-06-22-wiki-root-toml.md  2026-06-23-v0.3.25-ssot-schema-gen.md  2026-06-24-llmwiki-central-cache-actionable-responses.md  2026-06-24-llmwiki-pushy-naming.md  2026-06-24-v0.3.26-correctness.md  2026-06-24-v0.3.27-fix-init-default.md  2026-06-24-v0.3.28-remove-lsp-mcp.md  2026-06-24-v0.3.35-modernize.md
docs/superpowers/plans/_archive/: 2026-06-22-llmwiki-installable.md  2026-06-23-v0.3.0-finalize.md
docs/superpowers/specs/: 2026-06-21-karpathy-wiki-design.md  2026-06-22-wiki-root-toml-design.md  2026-06-23-multi-wiki-resolution-design.md  2026-06-23-multi-wiki-resolution-v032-design.md  2026-06-23-v0.3.25-ssot-schema-gen-design.md  2026-06-24-dependabot-pr10-migration-plan.md  2026-06-24-exclude-dirs-research.md  2026-06-24-frontmatter-field-audit.md  2026-06-24-llmwiki-central-cache-actionable-responses-design.md  2026-06-24-llmwiki-pushy-naming-design.md  2026-06-24-skill-binary-deps-landscape.md  2026-06-24-v0.3.25-self-critic.md  2026-06-24-v0.3.28-remove-lsp-mcp-design.md  2026-06-24-v0.3.29-flatten-sub-skills-design.md  2026-06-24-v0.3.29-self-critic-v2.md  2026-06-24-v0.3.29-self-critic-v3.md  2026-06-24-v0.3.29-self-critic-v4.md  2026-06-24-v0.3.29-self-critic-v5.md  2026-06-24-v0.3.29-self-critic.md  2026-06-24-v0.3.33-self-critic-v1.md  2026-06-24-v0.3.35-modernize-design.md  2026-06-24-v1-done-criteria-design.md  2026-06-24-wiki-exclusion-research.md
docs/superpowers/specs/_archive/: 2026-06-22-llmwiki-installable-design.md  2026-06-23-v0.3.0-finalize-design.md
example-wiki/: index.md  log.md
example-wiki/.wiki/: config.yaml
example-wiki/raw/articles/: example-source.md
example-wiki/wiki/: example.md
marketplace/: marketplace.json
marketplace/.claude-plugin/: plugin.json
marketplace/.codex-plugin/: plugin.json
marketplace/.cursor-plugin/: plugin.json
marketplace/.kimi-plugin/: plugin.json
marketplace/scripts/: validate.py
marketplace/skills/wiki/: SKILL.md
marketplace/skills/wiki/CONFIG/: SKILL.md
marketplace/skills/wiki/INGEST/: SKILL.md
marketplace/skills/wiki/LINT/: SKILL.md
marketplace/skills/wiki/LSP/: SKILL.md
marketplace/skills/wiki/LSP/evals/: evals.json
marketplace/skills/wiki/LSP/references/: lsp.md
marketplace/skills/wiki/MCP/: SKILL.md
marketplace/skills/wiki/MCP/evals/: evals.json
marketplace/skills/wiki/MCP/references/: doctor.schema.json  mcp.md
marketplace/skills/wiki/MODELS/: SKILL.md
marketplace/skills/wiki/QUERY/: SKILL.md
marketplace/skills/wiki/SEARCH/: SKILL.md
marketplace/skills/wiki/SETUP/: SKILL.md
marketplace/skills/wiki/SETUP/references/: install.md  schema.json
marketplace/skills/wiki/SYNC/: SKILL.md
marketplace/skills/wiki/TROUBLESHOOTING/: SKILL.md
resources/: models.toml  page.template.md
skills/: SKILL.md  wiki-agent.md  wiki-config.md  wiki-query.md  wiki-search.md  wiki-troubleshooting.md
skills/references/: frontmatter.schema.json  schema.json
src/: error.rs  lib.rs  main.rs
src/cli/: build.rs  completion.rs  config.rs  doctor.rs  doctor_report.rs  embed.rs  ingest.rs  init.rs  install_skill.rs  lint.rs  ls.rs  lsp.rs  mcp.rs  mod.rs  models.rs  query.rs  search.rs  skill.rs  status.rs  tree.rs  use_cmd.rs
src/core/: chunker.rs  config.rs  config_types.rs  embeddings.rs  frontmatter.rs  lsp_domain.rs  markdown.rs  mod.rs  models_registry.rs  nim.rs  registry.rs  workspace.rs
src/lint/: frontmatter.rs  mod.rs  tag_tax.rs  wikilinks.rs
src/skills/: WIKI.md  mod.rs  skill_md.md
src/skills/INGEST/: SKILL.md
src/skills/LINT/: SKILL.md
src/skills/MODELS/: SKILL.md
src/skills/QUERY/: SKILL.md
src/skills/SEARCH/: SKILL.md
src/skills/SETUP/: SKILL.md
src/skills/SYNC/: SKILL.md
src/skills/TROUBLESHOOTING/: SKILL.md
src/skills/data/: llmwiki-config.md  llmwiki-ingest.md  llmwiki-lint.md  llmwiki-models.md  llmwiki-query.md  llmwiki-search.md  llmwiki-setup.md  llmwiki-sync.md  llmwiki-troubleshooting.md  wiki-ingest.md  wiki-models.md  wiki-setup.md  wiki-sync.md
src/skills/topics/: ingest.md  lint.md  models.md  query.md  search.md  setup.md  sync.md  troubleshooting.md
tests/: build_test.rs  changelog_check.sh  chunker_test.rs  cli_test.rs  config_cli_test.rs  config_test.rs  config_v036_test.rs  config_v037_test.rs  doctor_test.rs  e2e_test.rs  e2e_v030_test.sh  embed_test.rs  embed_validate_test.rs  embeddings_io_test.rs  error_test.rs  exclude_dirs_test.rs  flat_layout_test.rs  fleet_search_test.rs  frontmatter_schema_test.rs  frontmatter_test.rs  ingest_test.rs  init_cli_test.rs  init_test.rs  install_skill_test.rs  lint_cli_test.rs  lint_frontmatter_test.rs  lint_wikilinks_test.rs  ls_test.rs  lsp_cli_test.rs  lsp_protocol_test.rs  mcp_cli_test.rs  mcp_protocol_test.rs  models_cli_test.rs  models_registry_test.rs  nim_test.rs  query_test.rs  registry_discovery_test.rs  registry_discovery_v032_test.rs  registry_test.rs  search_test.rs  (+8 more)
tests/common/: mod.rs
