[package]
name = "llmwiki-cli"
version = "0.3.22"
description = "Karpathy-style LLM Wiki CLI — manage multiple wikis, embed pages, search semantically"
license = "Apache-2.0"
repository = "https://github.com/Git-Fg/llmwiki"
homepage = "https://github.com/Git-Fg/llmwiki"
readme = "README.md"
keywords = ["llmwiki", "karpathy-wiki", "wiki", "knowledge-base", "rag"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "llmwiki-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
pulldown-cmark = "0.12"
notify = "6"
walkdir = "2"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
schemars = "1.0"
regex = "1.12.4"
toml = "0.8"
serde-toml-merge = "0.2"
sha2 = "0.11.0"
chrono = "0.4.45"
hex = "0.4"
tower-lsp-server = "0.23"
rmcp = { version = "1.7", features = ["server", "macros", "schemars", "transport-io"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
wiremock = "0.6"
jsonschema = "0.18"

[build-dependencies]
schemars = "1.0"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[package.metadata.binstall]
bin = "llmwiki-cli"
pkg-url = "https://github.com/Git-Fg/llmwiki/releases/download/v{ version }/llmwiki-cli-{ target }.tar.gz"
pkg-fmt = "tgz"
