[package]
name = "llmwiki-cli"
version = "0.3.34"
description = "Karpathy-style LLM Wiki CLI — manage multiple wikis, embed pages, search semantically"
license = "Apache-2.0"
repository = "https://github.com/Git-Fg/llmwiki"
homepage = "https://github.com/Git-Fg/llmwiki"
readme = "README.md"
keywords = ["llmwiki", "karpathy-wiki", "wiki", "knowledge-base", "rag"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "llmwiki-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0"
serde_json = "1"
walkdir = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.0"
regex = "1.12.4"
toml = "0.8"
sha2 = "0.11.0"
chrono = "0.4.45"
hex = "0.4"
rust-embed = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
wiremock = "0.6"
jsonschema = "0.46"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "1.0"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[package.metadata.binstall]
bin = "llmwiki-cli"
pkg-url = "https://github.com/Git-Fg/llmwiki/releases/download/v{ version }/llmwiki-cli-{ target }.tar.gz"
pkg-fmt = "tgz"
