[package]
name = "llmwiki-cli"
version = "0.3.35"
description = "Karpathy-style LLM Wiki CLI — manage multiple wikis, embed pages, search semantically"
license = "Apache-2.0"
repository = "https://github.com/Git-Fg/llmwiki"
homepage = "https://github.com/Git-Fg/llmwiki"
readme = "README.md"
keywords = ["llmwiki", "karpathy-wiki", "wiki", "knowledge-base", "rag"]
categories = ["command-line-utilities", "development-tools"]
edition = "2021"
rust-version = "1.88"

[[bin]]
name = "llmwiki-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0"
serde_json = "1"
walkdir = "2"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1.0"
regex = "1.12.4"
toml = "0.8"
sha2 = "0.11.0"
chrono = "0.4.45"
hex = "0.4"
rust-embed = "8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
insta = "1"
wiremock = "0.6"
jsonschema = "0.46"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
schemars = "1.0"
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[package.metadata.binstall]
bin = "llmwiki-cli"
pkg-url = "https://github.com/Git-Fg/llmwiki/releases/download/v{ version }/llmwiki-cli-{ target }.tar.gz"
pkg-fmt = "tgz"

[lints.clippy]
# Don't Panic — UTF-8 boundary slicing in production parsers.
# This is the highest-value of the four "Don't Panic" lints:
# it catches real panics on multi-byte characters in wikilink
# detection, JSON schema path matching, and content extraction.
# Catches 15 production sites in v0.3.34 source; zero test noise.
string_slice = "warn"

# Skipped for v0.3.35 (deferred to v0.3.36):
#   indexing_slicing — 77% of v0.3.34 fires are in test fixtures
#     (slicing Vecs we just constructed, always safe). A blanket
#     allow on /tests files is justified but adds churn. Defer until
#     a per-file annotation policy is in place.
#   unwrap_used — 81% of v0.3.34 fires are in test setup helpers
#     (strip_prefix on paths we just built). allow-unwrap-in-tests
#     does NOT apply to /tests integration-test crates (no #[cfg(test)]
#     wrapping). Per-site #[expect] would be 100+ annotations.
#   panic — ~17 fires, all in test helpers. Same justification as
#     unwrap_used; defer together with it.
